<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityWelcome"
    android:background="@drawable/gradient_dark">

    <!-- Main Circle Images -->
    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="330dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mid_circle_1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_x_mini__circle" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/big_circle" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="220dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/small_squre"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mid_circle"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mini__squre" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/smart_spending_nstress_free_living"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:ignore="TextSizeCheck" />

    <!-- Subtitle Text -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/track_save_thrive"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <!-- Get Started Button -->
    <TextView
        android:id="@+id/getStartedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_semibold"
        android:minHeight="48dp"
        android:paddingBottom="4dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleText" />

    <!-- Underline Image Below Button -->
    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="85dp"
        android:layout_height="3dp"
        android:contentDescription="@string/todo"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/getStartedBtn"
        app:layout_constraintTop_toTopOf="@+id/getStartedBtn"
        app:srcCompat="@drawable/underline" />

</androidx.constraintlayout.widget.ConstraintLayout>
