<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_dark"
    tools:context=".ProfileActivity">

    <!-- Moon -->
    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/moon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:fontFamily="@font/nunito_medium"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- First Name -->
    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/mini__squre1"
        android:hint="First Name"
        android:inputType="textPersonName|textCapWords"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" /> <!-- Adjust anchor -->

    <!-- Surname -->
    <EditText
        android:id="@+id/editSurname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/mini__squre1"
        android:hint="Surname"
        android:inputType="textPersonName|textCapWords"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <!-- User Email -->
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/mini__squre1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSurname" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/mini__squre1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurrentPassword" />

    <EditText
        android:id="@+id/editCurrentPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/mini__squre1"
        android:hint="Current Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />


    <!-- Show/Hide Password Icon -->
    <ImageView
        android:id="@+id/iconTogglePassword"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_eye"
        android:contentDescription="@string/toggle_password"
        app:layout_constraintEnd_toEndOf="@id/editPassword"
        app:layout_constraintBottom_toBottomOf="@id/editPassword"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="7dp"/>

    <!-- Update Button with Progress Bar -->
    <FrameLayout
        android:id="@+id/updateButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            style="@style/Widget.Material3.Button"/>

        <ProgressBar
            android:id="@+id/progressBarUpdate"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminateTint="@color/white"/> <!-- Or your desired color -->
    </FrameLayout>

    <!-- Delete Account Button with Progress Bar -->
    <FrameLayout
        android:id="@+id/deleteButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/updateButtonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp">

    <Button
        android:id="@+id/buttonDeleteAccount"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/delete_account"
        android:textColor="?android:attr/textColorPrimaryInverse" />

    <ProgressBar
        android:id="@+id/progressBarDelete"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/white"/> <!-- Or your desired color -->
</FrameLayout>



    <!-- Decorative Bottom -->
    <ImageView
        android:id="@+id/decorBottom"
        android:layout_width="10000dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="-5500dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_x_mini__circle1" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/deleteButtonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>